--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -4,6 +4,6 @@ FROM karalabe/xgo-latest
 #RUN git config --global http.proxy "https://mirrors.aliyun.com/goproxy/"
 #RUN git config --global https.proxy "https://mirrors.aliyun.com/goproxy/"
 
-ENV GOPROXY="https://mirrors.aliyun.com/goproxy/"
+ENV GOPROXY="https://goproxy.cn,direct"
 
 
