--- a/deploy/service.deployment.yaml
+++ b/deploy/service.deployment.yaml
@@ -7,6 +7,7 @@
 
 # Mac上NodePort也是不能直接访问的！！！
 # 因为minikube运行在 虚拟机linux上。 docker也是跑在虚拟机里的！！
+# 要minikube service xxx ，会自动打开浏览器
 
 # https://zhuanlan.zhihu.com/p/157565821
 apiVersion: v1 # v1是service的apiversion
@@ -19,5 +20,5 @@ spec:
   type: NodePort # ClusterIP, NodePort, LoadBalancer
   ports: # 将 Service 的 8080 端口映射到 Pod 的 8000 端口，使用 TCP 协议。
     - protocol: TCP
-      port: 8080
+      port: 8000
       targetPort: 8000
