--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 GIN_MODE=release
 
+# =local时，启动打开浏览器
 APP_ENV=localhost
 APP="business_data_model"
 APP_PORT=:8000
@@ -8,13 +9,13 @@ APP_PORT=:8000
 DB_CONNECTION=mysql
 DB_PORT=3306
 
-
-DB_EVENT_HOST=127.0.0.1
-DB_EVENT_USERNAME=root
-DB_EVENT_PASSWORD=root
+DB_EVENT_HOST=rms.com
+DB_EVENT_PORT=3306
+DB_EVENT_USERNAME=myyun
+DB_EVENT_PASSWORD=o@@
 DB_EVENT_DATABASE=business_event
 DB_EVENT_CHARSET=utf8
-DB_EVENT_FILTER=".*\\..*"
+DB_EVENT_FILTER="mysql\\..*,codeper\\..*"
 
 
 # redis
@@ -22,12 +23,35 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
 #json web token
-JWT_SECRET=aa08769cdcb26674c6706093503ff123
-ADMIN_JWT_SECRET=aa08769cdcb26674c6706093503ff123
+JWT_SECRET=
+ADMIN_JWT_SECRET=
 
 #ALIYUN OSS
-OSS_END_POINT=oss-cn-z.aliyuncs.com
-OSS_ACCESS_KEY_ID="cN"
-OSS_ACCESS_KEY_SECRET="AuvVt"
-OSS_BUCKET="owen-p"
-OSS_HTTP_HOST="http://.aliyuncs.com/"
+OSS_END_POINT=
+OSS_ACCESS_KEY_ID=""
+OSS_ACCESS_KEY_SECRET=""
+OSS_BUCKET=""
+OSS_HTTP_HOST=""
+
+
+# 状态管理
+## 状态流程检查是否开启
+ENABLE_CHECK_STATE=yes
+
+# 数据统计
+## 统计数据变更次数是否开启
+ENABLE_DATA_STATISTICS=yes
+## 统计数据累计次数， 满足立即写入到表statistics_day
+DATA_STATISTICS_EVENT_TIMES=2
+## 统计数据刷新频率设置 单位秒, 满足立即写入到表statistics_day
+DATA_STATISTICS_FLUSH_DURATION=500
+
+# 数据模型
+## 启动mysql-binlog 数据流收集
+ENABLE_MODEL_STREAM=yes
+## 累计满多少行数据写一次库, 满足立即写入到表ddd_event_stream
+MODEL_STREAM_FLUSH_ROWS=100
+##  数据刷新频率设置 单位秒, 满足立即写入到表ddd_event_stream
+MODEL_STREAM_FLUSH_DURATION=500
+
+
